--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "devDependencies": {
         "@types/frida-gum": "^18.7.0",
         "@types/node": "^20.14.14",
+        "madge": "^8.0.0",
         "typescript": "^5.5.4"
     }
 }
